# wavelet-noise

./: .gitignore  README.md  config.yaml  large_deviations.py  main.py  pyproject.toml  style.mplstyle  surd_analysis.py  toy_test.py
docs/source/: about.rst  conf.py  getting_started.rst  index.rst  modules.rst  theory.rst
docs/source/modules/: stats.rst  utils.rst  wavelet.rst
src/powerflow_postprocessing/: main.py  pf_plane_extraction.py  postprocessing.py  pyproject.toml  utils.py
src/rmp_calibration/: main.py  utils.py
src/wavelet_noise/: __init__.py  calibration.py  stats.py  surd_analysis.py  utils.py  wavelet.py
tests/: test_stats.py  test_utils.py  test_wavelet.py  test_wavelets.py  visually_test_wavelets.py
