[project]
name = "wavelet-noise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "enricofoglia99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pywavelets>=1.8.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[project.scripts]
wavelet-noise = "wavelet_noise:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyqt6>=6.9.1",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
